# content-intelligence

./: .gitignore  README.md  init.sh
app/: .env.example  README.md  auth.py  config.py  content_understanding_sample.py  document_intelligence_sample.py  llm.py  main.py  models.py  prompts.py  prompts.yaml  pyproject.toml  requirements.txt  webapp.py
app/core/: __init__.py  config.py  llm.py  models.py  prompts.py  prompts.yaml
app/samples/: __init__.py  content_understanding.py  document_intelligence.py
app/services/: __init__.py  blob_storage.py  content_understanding.py  document_intelligence.py
app/templates/: index.html
app/web/: app.py
app/web/templates/: index.html
infra/: main.tf  terraform.tfvars  terraform.tfvars.example  variables.tf
