[project]
name = "content-intelligence"
version = "0.1.0"
description = "Azure AI Foundry Content Understanding & Document Intelligence sample app"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "azure-identity>=1.19.0",
    "azure-ai-contentunderstanding>=1.0.0",
    "azure-ai-documentintelligence>=1.0.2",
    "python-dotenv>=1.0.0",
    "azure-ai-inference>=1.0.0b9",
    "pydantic>=2.13.2",
]

[project.scripts]
content-intelligence = "main:main"
